<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/title_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_order"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio_gp_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/title_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_gp_drink_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            android:checked="true"
            android:onClick="onclick_ChagedDrink"
            android:text="@string/radio_btn_tea" />

        <RadioButton
            android:id="@+id/radio_gp_drink_coffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            android:onClick="onclick_ChagedDrink"
            android:text="@string/radio_btn_coffee" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_addition"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/radio_gp_drink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="8dp"
        android:text="@string/checkbox_milk"
        app:layout_constraintEnd_toStartOf="@id/checkboxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_addition" />

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="8dp"
        android:text="@string/checkbox_sugar"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintTop_toBottomOf="@id/text_addition" />

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="8dp"
        android:text="@string/checkbox_lemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintTop_toBottomOf="@id/text_addition" />

    <TextView
        android:id="@+id/text_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_drink"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/checkboxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/spinner_option_of_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:minHeight="48dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_drink" />

    <Spinner
        android:id="@+id/spinner_option_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffee"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="8dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/text_drink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/btnSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/btn_send_order"
        android:src="@drawable/button"
        android:layout_margin="36dp"
        android:onClick="onClick_btnSendOrder"
        app:layout_constraintTop_toBottomOf="@id/spinner_option_of_tea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>